--- a/custom_image.ipynb
+++ b/custom_image.ipynb
@@ -19,12 +19,16 @@
     "\n",
     "FROM python:3.7-slim-buster\n",
     "\n",
-    "RUN pip3 install pandas==0.25.3 scikit-learn==0.21.3 fbprophet sagemaker-training\n",
+    "RUN pip3 install pandas==0.25.3 scikit-learn==0.21.3 prophet==1.2.5 sagemaker-training\n",
+    "\n",
+    "COPY train.py /opt/ml/code/preprocess.py\n",
     "COPY train.py /opt/ml/code/train.py\n",
+    "\n",
+    "ENV SAGEMAKER_PROGRAM preprocess.py\n",
     "ENV SAGEMAKER_PROGRAM train.py\n",
     "ENV PYTHONUNBUFFERED=TRUE\n",
     "\n",
-    "ENTRYPOINT [\"python3\", \"/opt/ml/code/train.py\"]"
+    "ENTRYPOINT [\"python3\"]"
    ]
   },
   {
@@ -37,9 +41,18 @@
     "\n",
     "account_id = boto3.client('sts').get_caller_identity().get('Account')\n",
     "region = boto3.Session().region_name\n",
-    "ecr_repository = 'sagemaker-processing-container'\n",
+    "ecr_repository = 'demo_prophet_promotional_forecasting'\n",
     "tag = ':latest'\n",
     "processing_repository_uri = '{}.dkr.ecr.{}.amazonaws.com/{}'.format(account_id, region, ecr_repository + tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecr_repository = 'demo_prophet_promotional_forecasting'"
    ]
   },
   {
@@ -59,6 +72,15 @@
    "outputs": [],
    "source": [
     "!aws ecr get-login-password --region {region} | docker login --username AWS --password-stdin {account_id}.dkr.ecr.{region}.amazonaws.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin account_id.dkr.ecr.us-east-1.amazonaws.com"
    ]
   },
   {
@@ -90,8 +112,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
