--- a/custom_image.ipynb
+++ b/custom_image.ipynb
@@ -15,14 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile docker/Dockerfile\n",
+    "%%writefile Dockerfile\n",
     "\n",
-    "FROM python:3.7-slim-buster\n",
+    "FROM python:3.9-slim-buster\n",
     "\n",
-    "RUN pip3 install pandas==0.25.3 scikit-learn==0.21.3 prophet==1.2.5 sagemaker-training\n",
+    "RUN pip install pandas==2.2.2 scikit-learn==1.4.2 prophet==1.1.5\n",
     "\n",
-    "COPY train.py /opt/ml/code/preprocess.py\n",
-    "COPY train.py /opt/ml/code/train.py\n",
+    "COPY code/preprocess.py /opt/ml/code/preprocess.py\n",
+    "COPY code/train.py /opt/ml/code/train.py\n",
     "\n",
     "ENV SAGEMAKER_PROGRAM preprocess.py\n",
     "ENV SAGEMAKER_PROGRAM train.py\n",
