--- a/build and_push_image.ipynb
+++ b/build and_push_image.ipynb
@@ -60,117 +60,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sending build context to Docker daemon  159.7kB\n",
+      "Sending build context to Docker daemon    169kB\n",
       "Step 1/8 : FROM python:3.9-slim-buster\n",
-      "3.9-slim-buster: Pulling from library/python\n",
-      "\n",
-      "\u001b[1Bb88d5577: Pulling fs layer \n",
-      "\u001b[1B16e23423: Pulling fs layer \n",
-      "\u001b[1Bda260408: Pulling fs layer \n",
-      "\u001b[1Bc79126f6: Pulling fs layer \n",
-      "\u001b[1BDigest: sha256:320a7a4250aba4249f458872adecf92eea88dc6abd2d76dc5c0f01cac9b53990[1A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[5A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[4A\u001b[2K\u001b[3A\u001b[2K\u001b[3A\u001b[2K\u001b[3A\u001b[2K\u001b[3A\u001b[2K\u001b[3A\u001b[2K\u001b[3A\u001b[2K\u001b[3A\u001b[2K\u001b[2A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\n",
-      "Status: Downloaded newer image for python:3.9-slim-buster\n",
       " ---> c84dbfe3b8de\n",
       "Step 2/8 : RUN pip install pandas==2.2.2 scikit-learn==1.4.2 prophet==1.1.5\n",
-      " ---> Running in c8fab2d4fd8f\n",
-      "Collecting pandas==2.2.2\n",
-      "  Downloading pandas-2.2.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.1 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 13.1/13.1 MB 47.0 MB/s eta 0:00:00\n",
-      "Collecting scikit-learn==1.4.2\n",
-      "  Downloading scikit_learn-1.4.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.2 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 12.2/12.2 MB 25.9 MB/s eta 0:00:00\n",
-      "Collecting prophet==1.1.5\n",
-      "  Downloading prophet-1.1.5-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (14.4 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 14.4/14.4 MB 54.2 MB/s eta 0:00:00\n",
-      "Collecting pytz>=2020.1\n",
-      "  Downloading pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 505.5/505.5 kB 19.7 MB/s eta 0:00:00\n",
-      "Collecting python-dateutil>=2.8.2\n",
-      "  Downloading python_dateutil-2.9.0.post0-py2.py3-none-any.whl (229 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 229.9/229.9 kB 2.8 MB/s eta 0:00:00\n",
-      "Collecting tzdata>=2022.7\n",
-      "  Downloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 345.4/345.4 kB 5.0 MB/s eta 0:00:00\n",
-      "Collecting numpy>=1.22.4\n",
-      "  Downloading numpy-2.0.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (19.5 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 19.5/19.5 MB 50.9 MB/s eta 0:00:00\n",
-      "Collecting scipy>=1.6.0\n",
-      "  Downloading scipy-1.13.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (38.6 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 38.6/38.6 MB 30.9 MB/s eta 0:00:00\n",
-      "Collecting threadpoolctl>=2.0.0\n",
-      "  Downloading threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
-      "Collecting joblib>=1.2.0\n",
-      "  Downloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 301.8/301.8 kB 40.3 MB/s eta 0:00:00\n",
-      "Collecting importlib-resources\n",
-      "  Downloading importlib_resources-6.4.2-py3-none-any.whl (34 kB)\n",
-      "Collecting matplotlib>=2.0.0\n",
-      "  Downloading matplotlib-3.9.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (8.3 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 8.3/8.3 MB 90.0 MB/s eta 0:00:00\n",
-      "Collecting holidays>=0.25\n",
-      "  Downloading holidays-0.54-py3-none-any.whl (1.0 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1.0/1.0 MB 11.1 MB/s eta 0:00:00\n",
-      "Collecting tqdm>=4.36.1\n",
-      "  Downloading tqdm-4.66.5-py3-none-any.whl (78 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 78.4/78.4 kB 18.3 MB/s eta 0:00:00\n",
-      "Collecting cmdstanpy>=1.0.4\n",
-      "  Downloading cmdstanpy-1.2.4-py3-none-any.whl (94 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 94.5/94.5 kB 13.9 MB/s eta 0:00:00\n",
-      "Collecting stanio<2.0.0,>=0.4.0\n",
-      "  Downloading stanio-0.5.1-py3-none-any.whl (8.1 kB)\n",
-      "Collecting pillow>=8\n",
-      "  Downloading pillow-10.4.0-cp39-cp39-manylinux_2_28_x86_64.whl (4.5 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 4.5/4.5 MB 27.0 MB/s eta 0:00:00\n",
-      "Collecting cycler>=0.10\n",
-      "  Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Collecting contourpy>=1.0.1\n",
-      "  Downloading contourpy-1.2.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (304 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 305.0/305.0 kB 42.8 MB/s eta 0:00:00\n",
-      "Collecting fonttools>=4.22.0\n",
-      "  Downloading fonttools-4.53.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.6 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 4.6/4.6 MB 30.8 MB/s eta 0:00:00\n",
-      "Collecting packaging>=20.0\n",
-      "  Downloading packaging-24.1-py3-none-any.whl (53 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 54.0/54.0 kB 7.7 MB/s eta 0:00:00\n",
-      "Collecting pyparsing>=2.3.1\n",
-      "  Downloading pyparsing-3.1.2-py3-none-any.whl (103 kB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 103.2/103.2 kB 19.4 MB/s eta 0:00:00\n",
-      "Collecting kiwisolver>=1.3.1\n",
-      "  Downloading kiwisolver-1.4.5-cp39-cp39-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.6 MB)\n",
-      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1.6/1.6 MB 84.6 MB/s eta 0:00:00\n",
-      "Collecting zipp>=3.1.0\n",
-      "  Downloading zipp-3.20.0-py3-none-any.whl (9.4 kB)\n",
-      "Collecting six>=1.5\n",
-      "  Downloading six-1.16.0-py2.py3-none-any.whl (11 kB)\n",
-      "Installing collected packages: pytz, zipp, tzdata, tqdm, threadpoolctl, six, pyparsing, pillow, packaging, numpy, kiwisolver, joblib, fonttools, cycler, stanio, scipy, python-dateutil, importlib-resources, contourpy, scikit-learn, pandas, matplotlib, holidays, cmdstanpy, prophet\n",
-      "Successfully installed cmdstanpy-1.2.4 contourpy-1.2.1 cycler-0.12.1 fonttools-4.53.1 holidays-0.54 importlib-resources-6.4.2 joblib-1.4.2 kiwisolver-1.4.5 matplotlib-3.9.2 numpy-2.0.1 packaging-24.1 pandas-2.2.2 pillow-10.4.0 prophet-1.1.5 pyparsing-3.1.2 python-dateutil-2.9.0.post0 pytz-2024.1 scikit-learn-1.4.2 scipy-1.13.1 six-1.16.0 stanio-0.5.1 threadpoolctl-3.5.0 tqdm-4.66.5 tzdata-2024.1 zipp-3.20.0\n",
-      "\u001b[91mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\n",
-      "\u001b[0m\u001b[91m\n",
-      "[notice] A new release of pip is available: 23.0.1 -> 24.2\n",
-      "[notice] To update, run: pip install --upgrade pip\n",
-      "\u001b[0mRemoving intermediate container c8fab2d4fd8f\n",
+      " ---> Using cache\n",
       " ---> a46aef910c10\n",
       "Step 3/8 : COPY code/preprocess.py /opt/ml/code/preprocess.py\n",
-      " ---> 4ea69954c34c\n",
+      " ---> 20a2cefcc36c\n",
       "Step 4/8 : COPY code/train.py /opt/ml/code/train.py\n",
-      " ---> 8fad42172006\n",
+      " ---> d12c9ec2e7a9\n",
       "Step 5/8 : ENV SAGEMAKER_PROGRAM preprocess.py\n",
-      " ---> Running in 2b54e57e5858\n",
-      "Removing intermediate container 2b54e57e5858\n",
-      " ---> 6019cde3c73a\n",
+      " ---> Running in d87f1061bc1b\n",
+      "Removing intermediate container d87f1061bc1b\n",
+      " ---> 1674ba879f7a\n",
       "Step 6/8 : ENV SAGEMAKER_PROGRAM train.py\n",
-      " ---> Running in d9ab046f54b4\n",
-      "Removing intermediate container d9ab046f54b4\n",
-      " ---> 259bb84ee9a7\n",
+      " ---> Running in 885a56402a5a\n",
+      "Removing intermediate container 885a56402a5a\n",
+      " ---> f2ac2750049b\n",
       "Step 7/8 : ENV PYTHONUNBUFFERED=TRUE\n",
-      " ---> Running in ae727190a86b\n",
-      "Removing intermediate container ae727190a86b\n",
-      " ---> f2151e3102c7\n",
+      " ---> Running in 5e7784720e76\n",
+      "Removing intermediate container 5e7784720e76\n",
+      " ---> 87d87052cfa6\n",
       "Step 8/8 : ENTRYPOINT [\"python3\"]\n",
-      " ---> Running in 82ca592f26b5\n",
-      "Removing intermediate container 82ca592f26b5\n",
-      " ---> 42e3ee5fa477\n",
-      "Successfully built 42e3ee5fa477\n",
+      " ---> Running in 39d061a7149e\n",
+      "Removing intermediate container 39d061a7149e\n",
+      " ---> 690e4f8f2fbc\n",
+      "Successfully built 690e4f8f2fbc\n",
       "Successfully tagged demo_prophet:latest\n"
      ]
     }
@@ -225,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -236,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -247,14 +163,14 @@
      "text": [
       "The push refers to repository [654654222480.dkr.ecr.us-east-1.amazonaws.com/demo_prophet]\n",
       "\n",
-      "\u001b[1B842cc9d0: Preparing \n",
-      "\u001b[1B488b5534: Preparing \n",
+      "\u001b[1B34ee111c: Preparing \n",
+      "\u001b[1Ba2501ff9: Preparing \n",
       "\u001b[1Bd0cba51b: Preparing \n",
       "\u001b[1Ba27560c1: Preparing \n",
       "\u001b[1B037e08b3: Preparing \n",
       "\u001b[1Beede8d6e: Preparing \n",
       "\u001b[1B55769c5e: Preparing \n",
-      "\u001b[6Bd0cba51b: Pushed   593.3MB/581.8MBA\u001b[2K\u001b[2A\u001b[2K\u001b[1A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[7A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2K\u001b[6A\u001b[2Klatest: digest: sha256:05db1090b79cef8c739046219afd1defc1e3f9206c416c183b8f4b100a9fd52b size: 1997\n"
+      "\u001b[1B8a51359d: Layer already exists \u001b[3A\u001b[2Klatest: digest: sha256:4557adba62c9b52d46fd40cdf91c3fb2db225e0c6009ceb8abe4fb29e1b60877 size: 1997\n"
      ]
     }
    ],
