--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -99,7 +99,7 @@
     "    name=\"PreprocessData\",\n",
     "    processor=script_processor,\n",
     "    inputs=[sagemaker.processing.ProcessingInput(source=input_data_uri, destination=\"/opt/ml/processing/input\")],\n",
-    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"processed_data\", destination=output_data_uri, source=\"/opt/ml/processing/output\")],\n",
+    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"processed_data\", destination=output_data_uri, source=\"/opt/ml/processing/output/preprocessed\")],\n",
     "    code=\"code/preprocess.py\"  # Replace with your preprocessing script\n",
     ")"
    ]
@@ -159,7 +159,7 @@
     "    name=\"TrainProphetModel\",\n",
     "    estimator=prophet_estimator,\n",
     "    inputs={\n",
-    "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"output_data\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
+    "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"preprocessed\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
     "    }\n",
     ")"
    ]
