updates to pipeline

--- a/build and_push_image.ipynb
+++ b/build and_push_image.ipynb
@@ -60,33 +60,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sending build context to Docker daemon    169kB\n",
+      "Sending build context to Docker daemon  174.1kB\n",
       "Step 1/8 : FROM python:3.9-slim-buster\n",
       " ---> c84dbfe3b8de\n",
       "Step 2/8 : RUN pip install pandas==2.2.2 scikit-learn==1.4.2 prophet==1.1.5\n",
       " ---> Using cache\n",
       " ---> a46aef910c10\n",
       "Step 3/8 : COPY code/preprocess.py /opt/ml/code/preprocess.py\n",
-      " ---> 20a2cefcc36c\n",
+      " ---> 0085b4d348f2\n",
       "Step 4/8 : COPY code/train.py /opt/ml/code/train.py\n",
-      " ---> d12c9ec2e7a9\n",
+      " ---> 561835458669\n",
       "Step 5/8 : ENV SAGEMAKER_PROGRAM preprocess.py\n",
-      " ---> Running in d87f1061bc1b\n",
-      "Removing intermediate container d87f1061bc1b\n",
-      " ---> 1674ba879f7a\n",
+      " ---> Running in 593ec15c6d8b\n",
+      "Removing intermediate container 593ec15c6d8b\n",
+      " ---> 2ecdd4b67660\n",
       "Step 6/8 : ENV SAGEMAKER_PROGRAM train.py\n",
-      " ---> Running in 885a56402a5a\n",
-      "Removing intermediate container 885a56402a5a\n",
-      " ---> f2ac2750049b\n",
+      " ---> Running in 248e4c560c67\n",
+      "Removing intermediate container 248e4c560c67\n",
+      " ---> 6073a3449ccf\n",
       "Step 7/8 : ENV PYTHONUNBUFFERED=TRUE\n",
-      " ---> Running in 5e7784720e76\n",
-      "Removing intermediate container 5e7784720e76\n",
-      " ---> 87d87052cfa6\n",
+      " ---> Running in be4ea78b51d1\n",
+      "Removing intermediate container be4ea78b51d1\n",
+      " ---> e3054966626c\n",
       "Step 8/8 : ENTRYPOINT [\"python3\"]\n",
-      " ---> Running in 39d061a7149e\n",
-      "Removing intermediate container 39d061a7149e\n",
-      " ---> 690e4f8f2fbc\n",
-      "Successfully built 690e4f8f2fbc\n",
+      " ---> Running in 6bd41e4ceddb\n",
+      "Removing intermediate container 6bd41e4ceddb\n",
+      " ---> a2e977f88ecf\n",
+      "Successfully built a2e977f88ecf\n",
       "Successfully tagged demo_prophet:latest\n"
      ]
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -163,14 +163,14 @@
      "text": [
       "The push refers to repository [654654222480.dkr.ecr.us-east-1.amazonaws.com/demo_prophet]\n",
       "\n",
-      "\u001b[1B34ee111c: Preparing \n",
-      "\u001b[1Ba2501ff9: Preparing \n",
+      "\u001b[1Bd79d1e09: Preparing \n",
+      "\u001b[1B4b1d6eb1: Preparing \n",
       "\u001b[1Bd0cba51b: Preparing \n",
       "\u001b[1Ba27560c1: Preparing \n",
       "\u001b[1B037e08b3: Preparing \n",
       "\u001b[1Beede8d6e: Preparing \n",
       "\u001b[1B55769c5e: Preparing \n",
-      "\u001b[1B8a51359d: Layer already exists \u001b[3A\u001b[2Klatest: digest: sha256:4557adba62c9b52d46fd40cdf91c3fb2db225e0c6009ceb8abe4fb29e1b60877 size: 1997\n"
+      "\u001b[8Bd79d1e09: Pushed lready exists \u001b[3A\u001b[2K\u001b[7A\u001b[2K\u001b[8A\u001b[2Klatest: digest: sha256:33671d74386451fe93c1978fd3b644f8cd1e35bf72e0534cbc281b8645046c49 size: 1997\n"
      ]
     }
    ],
