--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "# Define training step\n",
     "training_step = TrainingStep(\n",
-    "    name=\"TrainProphetModel\",\n",
+    "    name=\"TrainModel\",\n",
     "    estimator=prophet_estimator,\n",
     "    inputs={\n",
     "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"preprocessed\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
