updates to pipeline

--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -139,6 +139,7 @@
     "prophet_estimator = sagemaker.estimator.Estimator(\n",
     "    image_uri=custom_image_uri,  # Use a custom image with Prophet installed\n",
     "    role=role,\n",
+    "    sagemaker_session=pipeline_session,\n",
     "    instance_count=1,\n",
     "    instance_type=\"ml.t3.medium\",\n",
     "    entry_point='code/train.py',\n",
