update to pipeline

--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -99,33 +99,9 @@
     "    name=\"PreprocessData\",\n",
     "    processor=script_processor,\n",
     "    inputs=[sagemaker.processing.ProcessingInput(source=input_data_uri, destination=\"/opt/ml/processing/input\")],\n",
-    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"processed_data\", destination=output_data_uri, source=\"/opt/ml/processing/output/preprocessed\")],\n",
+    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"prprocessed_data\", destination=output_data_uri, source=\"/opt/ml/processing/output/preprocessed\")],\n",
     "    code=\"code/preprocess.py\"  # Replace with your preprocessing script\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0c4a850d-8597-4182-823c-2d999c693a5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preprocessing_step = script_processor.run(\n",
-    "#     inputs=[sagemaker.processing.ProcessingInput(source=input_data_uri, destination=\"/opt/ml/processing/input\")],\n",
-    "#     outputs=[sagemaker.processing.ProcessingOutput(output_name=\"processed_data\", destination=output_data_uri, source=\"/opt/ml/processing/output\")],\n",
-    "#     code=\"code/preprocess.py\"  # Replace with your preprocessing script\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "85b59103-df1c-4d04-a213-8286df10727b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preprocessing_step = ProcessingStep(name=\"PreprocessData\", step_args=preprocessing_step)"
    ]
   },
   {
@@ -160,7 +136,7 @@
     "    name=\"TrainModel\",\n",
     "    estimator=prophet_estimator,\n",
     "    inputs={\n",
-    "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"preprocessed\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
+    "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"preprocessed_data\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
     "    }\n",
     ")"
    ]
