--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a839b4bc-d7ec-465f-bbd7-ee192b2b82b3",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
     "    role=role,\n",
     "    sagemaker_session=pipeline_session,\n",
     "    instance_count=1,\n",
-    "    instance_type=\"ml.t3.medium\",\n",
+    "    instance_type=\"ml.m5.large\",\n",
     "    entry_point='code/train.py',\n",
     "    script_mode=True,\n",
     "    output_path=\"s3://hemz-bucket/output-data/model-artifacts/\"\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0c364f01-74e3-47b7-943a-09d4b2dbe238",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "aa2a6eac-12a3-4bf2-8e93-139911475da9",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "bdd371e2-a772-4e8c-b635-c416cf114d5f",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "03d0a02f-6155-4825-9232-ae94a15ae87b",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "7d82fd02-743a-4424-bc82-9226f21a36bc",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "fb160b45-fd90-4185-b661-0a2c93c5889a",
    "metadata": {},
    "outputs": [
@@ -228,16 +228,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '61f01436-1c0c-40d9-8f34-81022c01b550',\n",
+       " 'ResponseMetadata': {'RequestId': '8614b491-483d-4eee-9053-69b6de300db0',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '61f01436-1c0c-40d9-8f34-81022c01b550',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '8614b491-483d-4eee-9053-69b6de300db0',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '84',\n",
-       "   'date': 'Fri, 16 Aug 2024 13:26:09 GMT'},\n",
+       "   'date': 'Fri, 16 Aug 2024 16:51:24 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,17 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "cec0fb7a-c825-4730-959c-1b8b1cdfd4a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/otzemv7eqpyi', sagemaker_session=<sagemaker.session.Session object at 0x7f74c085d960>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/3xzf0bedoecs', sagemaker_session=<sagemaker.session.Session object at 0x7f9989aea2f0>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,9 +280,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_pytorch_p310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
