updates to code

--- a/build and_push_image.ipynb
+++ b/build and_push_image.ipynb
@@ -60,33 +60,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sending build context to Docker daemon  174.1kB\n",
+      "Sending build context to Docker daemon  222.2kB\n",
       "Step 1/8 : FROM python:3.9-slim-buster\n",
       " ---> c84dbfe3b8de\n",
       "Step 2/8 : RUN pip install pandas==2.2.2 scikit-learn==1.4.2 prophet==1.1.5\n",
       " ---> Using cache\n",
       " ---> a46aef910c10\n",
       "Step 3/8 : COPY code/preprocess.py /opt/ml/code/preprocess.py\n",
-      " ---> 0085b4d348f2\n",
+      " ---> 534fff976058\n",
       "Step 4/8 : COPY code/train.py /opt/ml/code/train.py\n",
-      " ---> 561835458669\n",
+      " ---> bd5701bd5b60\n",
       "Step 5/8 : ENV SAGEMAKER_PROGRAM preprocess.py\n",
-      " ---> Running in 593ec15c6d8b\n",
-      "Removing intermediate container 593ec15c6d8b\n",
-      " ---> 2ecdd4b67660\n",
+      " ---> Running in 0a72c93aad2c\n",
+      "Removing intermediate container 0a72c93aad2c\n",
+      " ---> 970fc6087f50\n",
       "Step 6/8 : ENV SAGEMAKER_PROGRAM train.py\n",
-      " ---> Running in 248e4c560c67\n",
-      "Removing intermediate container 248e4c560c67\n",
-      " ---> 6073a3449ccf\n",
+      " ---> Running in 4d50956c2ed0\n",
+      "Removing intermediate container 4d50956c2ed0\n",
+      " ---> d0959c096f61\n",
       "Step 7/8 : ENV PYTHONUNBUFFERED=TRUE\n",
-      " ---> Running in be4ea78b51d1\n",
-      "Removing intermediate container be4ea78b51d1\n",
-      " ---> e3054966626c\n",
+      " ---> Running in e7d457704c7e\n",
+      "Removing intermediate container e7d457704c7e\n",
+      " ---> d9e448277e4e\n",
       "Step 8/8 : ENTRYPOINT [\"python3\"]\n",
-      " ---> Running in 6bd41e4ceddb\n",
-      "Removing intermediate container 6bd41e4ceddb\n",
-      " ---> a2e977f88ecf\n",
-      "Successfully built a2e977f88ecf\n",
+      " ---> Running in e7843c676d25\n",
+      "Removing intermediate container e7843c676d25\n",
+      " ---> 28e2f13eba36\n",
+      "Successfully built 28e2f13eba36\n",
       "Successfully tagged demo_prophet:latest\n"
      ]
     }
@@ -163,14 +163,14 @@
      "text": [
       "The push refers to repository [654654222480.dkr.ecr.us-east-1.amazonaws.com/demo_prophet]\n",
       "\n",
-      "\u001b[1Bd79d1e09: Preparing \n",
-      "\u001b[1B4b1d6eb1: Preparing \n",
+      "\u001b[1B25db0969: Preparing \n",
+      "\u001b[1B1fb211e6: Preparing \n",
       "\u001b[1Bd0cba51b: Preparing \n",
       "\u001b[1Ba27560c1: Preparing \n",
       "\u001b[1B037e08b3: Preparing \n",
       "\u001b[1Beede8d6e: Preparing \n",
       "\u001b[1B55769c5e: Preparing \n",
-      "\u001b[8Bd79d1e09: Pushed lready exists \u001b[3A\u001b[2K\u001b[7A\u001b[2K\u001b[8A\u001b[2Klatest: digest: sha256:33671d74386451fe93c1978fd3b644f8cd1e35bf72e0534cbc281b8645046c49 size: 1997\n"
+      "\u001b[8B25db0969: Pushed lready exists \u001b[4A\u001b[2K\u001b[2A\u001b[2K\u001b[7A\u001b[2K\u001b[8A\u001b[2Klatest: digest: sha256:17732785b530c52cb495c90b277ac9679dfb51f15b6232079fc125913610244a size: 1997\n"
      ]
     }
    ],
