--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -99,7 +99,7 @@
     "    name=\"PreprocessData\",\n",
     "    processor=script_processor,\n",
     "    inputs=[sagemaker.processing.ProcessingInput(source=input_data_uri, destination=\"/opt/ml/processing/input\")],\n",
-    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"preprocessed_data\", destination=output_data_uri, source=\"/opt/ml/processing/train\")],\n",
+    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"train\", destination=output_data_uri, source=\"/opt/ml/processing/train\")],\n",
     "    code=\"code/preprocess.py\"  # Replace with your preprocessing script\n",
     ")"
    ]
@@ -136,7 +136,7 @@
     "    name=\"TrainModel\",\n",
     "    estimator=prophet_estimator,\n",
     "    inputs={\n",
-    "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"preprocessed_data\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
+    "        \"train\": TrainingInput(s3_data=preprocessing_step.properties.ProcessingOutputConfig.Outputs[\"train\"].S3Output.S3Uri, content_type=\"text/csv\")\n",
     "    }\n",
     ")"
    ]
