--- a/build and_push_image.ipynb
+++ b/build and_push_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
@@ -20,21 +20,22 @@
     "\n",
     "FROM python:3.9-slim-buster\n",
     "\n",
-    "RUN pip install pandas==2.2.2 scikit-learn==1.4.2 prophet==1.1.5\n",
-    "\n",
+    "COPY requirements.txt /opt/ml/requirements.txt\n",
     "COPY code/preprocess.py /opt/ml/code/preprocess.py\n",
     "COPY code/train.py /opt/ml/code/train.py\n",
+    "\n",
+    "RUN pip3 install -r /opt/ml/requirements.txt\n",
     "\n",
     "ENV SAGEMAKER_PROGRAM preprocess.py\n",
     "ENV SAGEMAKER_PROGRAM train.py\n",
     "ENV PYTHONUNBUFFERED=TRUE\n",
     "\n",
-    "ENTRYPOINT [\"python3\"]"
+    "ENTRYPOINT [\"python3\", \"/opt/ml/code/train.py\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {
     "tags": []
    },
@@ -60,33 +61,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sending build context to Docker daemon  222.2kB\n",
-      "Step 1/8 : FROM python:3.9-slim-buster\n",
+      "Sending build context to Docker daemon    321kB\n",
+      "Step 1/9 : FROM python:3.9-slim-buster\n",
       " ---> c84dbfe3b8de\n",
-      "Step 2/8 : RUN pip install pandas==2.2.2 scikit-learn==1.4.2 prophet==1.1.5\n",
-      " ---> Using cache\n",
-      " ---> a46aef910c10\n",
-      "Step 3/8 : COPY code/preprocess.py /opt/ml/code/preprocess.py\n",
-      " ---> 534fff976058\n",
-      "Step 4/8 : COPY code/train.py /opt/ml/code/train.py\n",
-      " ---> bd5701bd5b60\n",
-      "Step 5/8 : ENV SAGEMAKER_PROGRAM preprocess.py\n",
-      " ---> Running in 0a72c93aad2c\n",
-      "Removing intermediate container 0a72c93aad2c\n",
-      " ---> 970fc6087f50\n",
-      "Step 6/8 : ENV SAGEMAKER_PROGRAM train.py\n",
-      " ---> Running in 4d50956c2ed0\n",
-      "Removing intermediate container 4d50956c2ed0\n",
-      " ---> d0959c096f61\n",
-      "Step 7/8 : ENV PYTHONUNBUFFERED=TRUE\n",
-      " ---> Running in e7d457704c7e\n",
-      "Removing intermediate container e7d457704c7e\n",
-      " ---> d9e448277e4e\n",
-      "Step 8/8 : ENTRYPOINT [\"python3\"]\n",
-      " ---> Running in e7843c676d25\n",
-      "Removing intermediate container e7843c676d25\n",
-      " ---> 28e2f13eba36\n",
-      "Successfully built 28e2f13eba36\n",
+      "Step 2/9 : COPY requirements.txt /opt/ml/requirements.txt\n",
+      " ---> 19967f0ddabd\n",
+      "Step 3/9 : COPY code/preprocess.py /opt/ml/code/preprocess.py\n",
+      " ---> 63e41cd006c9\n",
+      "Step 4/9 : COPY code/train.py /opt/ml/code/train.py\n",
+      " ---> fbf7be1e6668\n",
+      "Step 5/9 : RUN pip3 install -r /opt/ml/requirements.txt\n",
+      " ---> Running in 427494327f4d\n",
+      "Collecting matplotlib==3.8.4\n",
+      "  Downloading matplotlib-3.8.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.6 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 11.6/11.6 MB 56.3 MB/s eta 0:00:00\n",
+      "Collecting numpy==1.26.4\n",
+      "  Downloading numpy-1.26.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.2 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 18.2/18.2 MB 60.1 MB/s eta 0:00:00\n",
+      "Collecting pandas==1.5.3\n",
+      "  Downloading pandas-1.5.3-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.2 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 12.2/12.2 MB 72.4 MB/s eta 0:00:00\n",
+      "Collecting plotly==5.22.0\n",
+      "  Downloading plotly-5.22.0-py3-none-any.whl (16.4 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 16.4/16.4 MB 47.6 MB/s eta 0:00:00\n",
+      "Collecting prophet==1.1.5\n",
+      "  Downloading prophet-1.1.5-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (14.4 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 14.4/14.4 MB 53.7 MB/s eta 0:00:00\n",
+      "Collecting scipy==1.13.1\n",
+      "  Downloading scipy-1.13.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (38.6 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 38.6/38.6 MB 9.0 MB/s eta 0:00:00\n",
+      "Collecting pillow>=8\n",
+      "  Downloading pillow-10.4.0-cp39-cp39-manylinux_2_28_x86_64.whl (4.5 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 4.5/4.5 MB 29.1 MB/s eta 0:00:00\n",
+      "Collecting cycler>=0.10\n",
+      "  Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+      "Collecting pyparsing>=2.3.1\n",
+      "  Downloading pyparsing-3.1.2-py3-none-any.whl (103 kB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 103.2/103.2 kB 6.8 MB/s eta 0:00:00\n",
+      "Collecting packaging>=20.0\n",
+      "  Downloading packaging-24.1-py3-none-any.whl (53 kB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 54.0/54.0 kB 8.6 MB/s eta 0:00:00\n",
+      "Collecting python-dateutil>=2.7\n",
+      "  Downloading python_dateutil-2.9.0.post0-py2.py3-none-any.whl (229 kB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 229.9/229.9 kB 25.8 MB/s eta 0:00:00\n",
+      "Collecting importlib-resources>=3.2.0\n",
+      "  Downloading importlib_resources-6.4.2-py3-none-any.whl (34 kB)\n",
+      "Collecting contourpy>=1.0.1\n",
+      "  Downloading contourpy-1.2.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (304 kB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 305.0/305.0 kB 39.3 MB/s eta 0:00:00\n",
+      "Collecting kiwisolver>=1.3.1\n",
+      "  Downloading kiwisolver-1.4.5-cp39-cp39-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.6 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1.6/1.6 MB 86.2 MB/s eta 0:00:00\n",
+      "Collecting fonttools>=4.22.0\n",
+      "  Downloading fonttools-4.53.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.6 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 4.6/4.6 MB 66.7 MB/s eta 0:00:00\n",
+      "Collecting pytz>=2020.1\n",
+      "  Downloading pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 505.5/505.5 kB 63.3 MB/s eta 0:00:00\n",
+      "Collecting tenacity>=6.2.0\n",
+      "  Downloading tenacity-9.0.0-py3-none-any.whl (28 kB)\n",
+      "Collecting cmdstanpy>=1.0.4\n",
+      "  Downloading cmdstanpy-1.2.4-py3-none-any.whl (94 kB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 94.5/94.5 kB 22.4 MB/s eta 0:00:00\n",
+      "Collecting holidays>=0.25\n",
+      "  Downloading holidays-0.54-py3-none-any.whl (1.0 MB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1.0/1.0 MB 55.5 MB/s eta 0:00:00\n",
+      "Collecting tqdm>=4.36.1\n",
+      "  Downloading tqdm-4.66.5-py3-none-any.whl (78 kB)\n",
+      "     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 78.4/78.4 kB 20.9 MB/s eta 0:00:00\n",
+      "Collecting stanio<2.0.0,>=0.4.0\n",
+      "  Downloading stanio-0.5.1-py3-none-any.whl (8.1 kB)\n",
+      "Collecting zipp>=3.1.0\n",
+      "  Downloading zipp-3.20.0-py3-none-any.whl (9.4 kB)\n",
+      "Collecting six>=1.5\n",
+      "  Downloading six-1.16.0-py2.py3-none-any.whl (11 kB)\n",
+      "Installing collected packages: pytz, zipp, tqdm, tenacity, six, pyparsing, pillow, packaging, numpy, kiwisolver, fonttools, cycler, stanio, scipy, python-dateutil, plotly, importlib-resources, contourpy, pandas, matplotlib, holidays, cmdstanpy, prophet\n",
+      "Successfully installed cmdstanpy-1.2.4 contourpy-1.2.1 cycler-0.12.1 fonttools-4.53.1 holidays-0.54 importlib-resources-6.4.2 kiwisolver-1.4.5 matplotlib-3.8.4 numpy-1.26.4 packaging-24.1 pandas-1.5.3 pillow-10.4.0 plotly-5.22.0 prophet-1.1.5 pyparsing-3.1.2 python-dateutil-2.9.0.post0 pytz-2024.1 scipy-1.13.1 six-1.16.0 stanio-0.5.1 tenacity-9.0.0 tqdm-4.66.5 zipp-3.20.0\n",
+      "\u001b[91mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\n",
+      "\u001b[0m\u001b[91m\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 24.2\n",
+      "[notice] To update, run: pip install --upgrade pip\n",
+      "\u001b[0mRemoving intermediate container 427494327f4d\n",
+      " ---> b58ed3fbff12\n",
+      "Step 6/9 : ENV SAGEMAKER_PROGRAM preprocess.py\n",
+      " ---> Running in 8dc58808cf67\n",
+      "Removing intermediate container 8dc58808cf67\n",
+      " ---> f1f743bf786e\n",
+      "Step 7/9 : ENV SAGEMAKER_PROGRAM train.py\n",
+      " ---> Running in 12ec9f3a5c49\n",
+      "Removing intermediate container 12ec9f3a5c49\n",
+      " ---> 6f836c845cf7\n",
+      "Step 8/9 : ENV PYTHONUNBUFFERED=TRUE\n",
+      " ---> Running in d0fc780dbc09\n",
+      "Removing intermediate container d0fc780dbc09\n",
+      " ---> fab1c8ee1710\n",
+      "Step 9/9 : ENTRYPOINT [\"python3\", \"/opt/ml/code/train.py\"]\n",
+      " ---> Running in 082de2c9d5f5\n",
+      "Removing intermediate container 082de2c9d5f5\n",
+      " ---> 7e2f26b0d641\n",
+      "Successfully built 7e2f26b0d641\n",
       "Successfully tagged demo_prophet:latest\n"
      ]
     }
@@ -98,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
@@ -121,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -141,7 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# aws ecr describe-repositories --repository-names \"${algorithm_name}\" > /dev/null 2>&1\n",
+    "# if [ $? -ne 0 ]\n",
+    "# then\n",
+    "# aws ecr create-repository --repository-name \"${algorithm_name}\" > /dev/null\n",
+    "# fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -152,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {
     "tags": []
    },
@@ -163,20 +251,28 @@
      "text": [
       "The push refers to repository [654654222480.dkr.ecr.us-east-1.amazonaws.com/demo_prophet]\n",
       "\n",
-      "\u001b[1B25db0969: Preparing \n",
-      "\u001b[1B1fb211e6: Preparing \n",
-      "\u001b[1Bd0cba51b: Preparing \n",
+      "\u001b[1B780a63ad: Preparing \n",
+      "\u001b[1Bffb86411: Preparing \n",
+      "\u001b[1Ba7126220: Preparing \n",
+      "\u001b[1Ba3b6f7dc: Preparing \n",
       "\u001b[1Ba27560c1: Preparing \n",
       "\u001b[1B037e08b3: Preparing \n",
       "\u001b[1Beede8d6e: Preparing \n",
       "\u001b[1B55769c5e: Preparing \n",
-      "\u001b[8B25db0969: Pushed lready exists \u001b[4A\u001b[2K\u001b[2A\u001b[2K\u001b[7A\u001b[2K\u001b[8A\u001b[2Klatest: digest: sha256:17732785b530c52cb495c90b277ac9679dfb51f15b6232079fc125913610244a size: 1997\n"
+      "\u001b[9B780a63ad: Pushed   657.9MB/627.5MBA\u001b[2K\u001b[3A\u001b[2K\u001b[2A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[8A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[6A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2KPushing    517MB/627.5MB\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2K\u001b[9A\u001b[2Klatest: digest: sha256:071fa4ffebba65812633e53d7757237254dfda7a92d2e44e0d7a83cf130acba7 size: 2204\n"
      ]
     }
    ],
    "source": [
     "!docker push $processing_repository_uri"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
