--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "fe3ee01b-fa89-4666-a8a1-df7b8bc9c6d8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/sagemaker-user/.config/sagemaker/config.yaml\n"
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
      ]
     }
    ],
@@ -32,8 +34,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f5a6a2ff-57c6-45ca-a919-87adf04e8764",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:botocore.credentials:Found credentials from IAM Role: BaseNotebookInstanceEc2InstanceRole\n",
+      "INFO:botocore.credentials:Found credentials from IAM Role: BaseNotebookInstanceEc2InstanceRole\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize SageMaker session and client\n",
     "sagemaker_session = sagemaker.Session()\n",
@@ -44,9 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "3b25d7fc-2f28-4cf0-be2a-8bc938dfaaf1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%run './build_and_push_image.ipynb'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "48aea13c-ea78-4594-bb26-b6108b5affec",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Define input parameters\n",
@@ -72,9 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2b3a6c34-3a72-4905-a486-c6385719cf32",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Define preprocessing step\n",
@@ -90,9 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ea850f36-16ed-494b-9ea8-45b35086733d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "preprocessing_step = ProcessingStep(\n",
@@ -106,9 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a839b4bc-d7ec-465f-bbd7-ee192b2b82b3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Define the custom estimator for Prophet\n",
@@ -120,15 +153,17 @@
     "    instance_type=\"ml.m5.large\",\n",
     "    entry_point='code/train.py',\n",
     "    script_mode=True,\n",
-    "    output_path=\"s3://hemz-bucket/model-artifacts/\"\n",
+    "    output_path=\"s3://hemz-bucket/output-data/model-artifacts/\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0c364f01-74e3-47b7-943a-09d4b2dbe238",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Define training step\n",
@@ -143,9 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "aa2a6eac-12a3-4bf2-8e93-139911475da9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "model = Model(\n",
@@ -158,15 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "bdd371e2-a772-4e8c-b635-c416cf114d5f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:332: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
+      "/home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:332: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -184,9 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "03d0a02f-6155-4825-9232-ae94a15ae87b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Define model registration step\n",
@@ -195,9 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7d82fd02-743a-4424-bc82-9226f21a36bc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Training pipeline\n",
@@ -210,9 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fb160b45-fd90-4185-b661-0a2c93c5889a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -228,16 +273,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '8614b491-483d-4eee-9053-69b6de300db0',\n",
+       " 'ResponseMetadata': {'RequestId': '0248a584-f7ea-4885-81ee-f85418f0dcc8',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '8614b491-483d-4eee-9053-69b6de300db0',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '0248a584-f7ea-4885-81ee-f85418f0dcc8',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '84',\n",
-       "   'date': 'Fri, 16 Aug 2024 16:51:24 GMT'},\n",
+       "   'date': 'Fri, 16 Aug 2024 18:40:09 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,17 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "cec0fb7a-c825-4730-959c-1b8b1cdfd4a2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/3xzf0bedoecs', sagemaker_session=<sagemaker.session.Session object at 0x7f9989aea2f0>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/1lzqeob9c4n9', sagemaker_session=<sagemaker.session.Session object at 0x7f2f1be60460>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ebe44d-6856-40d5-99a4-bbb3fd4c1c24",
+   "id": "4ad84062-d150-414e-bee2-8aa9d6c2b5a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -280,9 +327,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
