--- a/sagemaker_pipelines.ipynb
+++ b/sagemaker_pipelines.ipynb
@@ -57,19 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3b25d7fc-2f28-4cf0-be2a-8bc938dfaaf1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%run './build_and_push_image.ipynb'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "48aea13c-ea78-4594-bb26-b6108b5affec",
    "metadata": {
     "tags": []
@@ -99,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2b3a6c34-3a72-4905-a486-c6385719cf32",
    "metadata": {
     "tags": []
@@ -119,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ea850f36-16ed-494b-9ea8-45b35086733d",
    "metadata": {
     "tags": []
@@ -130,14 +118,14 @@
     "    name=\"PreprocessData\",\n",
     "    processor=script_processor,\n",
     "    inputs=[sagemaker.processing.ProcessingInput(source=input_data_uri, destination=\"/opt/ml/processing/input\")],\n",
-    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"train\", destination=output_data_uri, source=\"/opt/ml/processing/train\")],\n",
+    "    outputs=[sagemaker.processing.ProcessingOutput(output_name=\"train\", destination=output_data_uri, source=\"/opt/ml/processing/output\")],\n",
     "    code=\"code/preprocess.py\"  # Replace with your preprocessing script\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a839b4bc-d7ec-465f-bbd7-ee192b2b82b3",
    "metadata": {
     "tags": []
@@ -159,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0c364f01-74e3-47b7-943a-09d4b2dbe238",
    "metadata": {
     "tags": []
@@ -178,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "aa2a6eac-12a3-4bf2-8e93-139911475da9",
    "metadata": {
     "tags": []
@@ -195,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bdd371e2-a772-4e8c-b635-c416cf114d5f",
    "metadata": {
     "tags": []
@@ -223,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "03d0a02f-6155-4825-9232-ae94a15ae87b",
    "metadata": {
     "tags": []
@@ -236,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7d82fd02-743a-4424-bc82-9226f21a36bc",
    "metadata": {
     "tags": []
@@ -253,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "fb160b45-fd90-4185-b661-0a2c93c5889a",
    "metadata": {
     "tags": []
@@ -273,16 +261,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '0248a584-f7ea-4885-81ee-f85418f0dcc8',\n",
+       " 'ResponseMetadata': {'RequestId': 'adc1a503-8817-49d3-9a82-ca5eafc99b9b',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '0248a584-f7ea-4885-81ee-f85418f0dcc8',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'adc1a503-8817-49d3-9a82-ca5eafc99b9b',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '84',\n",
-       "   'date': 'Fri, 16 Aug 2024 18:40:09 GMT'},\n",
+       "   'date': 'Fri, 16 Aug 2024 18:57:06 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "cec0fb7a-c825-4730-959c-1b8b1cdfd4a2",
    "metadata": {
     "tags": []
@@ -303,10 +291,10 @@
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/1lzqeob9c4n9', sagemaker_session=<sagemaker.session.Session object at 0x7f2f1be60460>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:654654222480:pipeline/TrainingPipeline/execution/95chhwx3ntlw', sagemaker_session=<sagemaker.session.Session object at 0x7fa3c6a79600>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
